--- a/index.html
+++ b/index.html
@@ -62,12 +62,7 @@
                     <div class="mdui-card-header-subtitle">作为鸽子应该咕咕咕！</div>
                 </div>
                 <div class="mdui-card-media">
-                    <p>这只是一个无聊的小站，站长搭建来自娱自乐罢了
-                    <br>站长开学后只在周五、周六、周日上线，封校除外。
-                    <br>这个网站也摇摇晃晃过了五年，我也长大了不少
-                    <br>已经没什么兴趣收拾什么了
-                    <br>感谢你的访问
-                </p>
+                    <img src="https://bing.img.run/1366x768.php" alt="Bing每日壁纸普清" />
                 </div>
                 <div class="mdui-card-actions">
                     <a href="https://fvli.top/" class="mdui-btn mdui-ripple">喵喵喵</a>
@@ -78,15 +73,32 @@
         <!-- 卡片一 -->
         <div class="mdui-card card">
             <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">About Me</div>
+                <div class="mdui-card-primary-subtitle">咕咕咕</div>
+            </div>
+            <!-- 卡片的内容 -->
+            <div class="mdui-card-content" id="posts">
+                    <p>这只是一个无聊的小站，站长搭建来自娱自乐罢了
+                    <br>站长开学后只在周五、周六、周日上线，封校除外。
+                    <br>这个网站也摇摇晃晃过了五年，我也长大了不少
+                    <br>已经没什么兴趣收拾什么了
+                    <br>感谢你的访问
+                </p>
+            </div>
+        </div><br>
+            
+        <!-- Devise -->
+        <div class="mdui-card card">
+            <div class="mdui-card-primary">
                 <div class="mdui-card-primary-title">My Devise</div>
                 <div class="mdui-card-primary-subtitle">我的电子设备</div>
             </div>
             <!-- 卡片的内容 -->
-            <div class="mdui-card-content" id="posts">
+            <div class="mdui-card-content" id="posts middle">
                 <p>1.REDMI Turbo 4 祥云白 16+256G</br>2.一台搭载了i3-8100的CPU和GTX1070Ti的GPU的电脑</br>3.Nintendo Switch（卖了）</br>4.New Nintendo 3ds（卖了）</br>5.荣耀20（换掉了）</br>6.REDMI Buds 6 Lite（青春版）（有点想换CMF By Nothing的耳机）</br>7.小米手环9 NFC版</br>etc.</p>
             </div>
         </div><br>
-
+            
         <!-- Games -->
         <div class="mdui-card card">
             <div class="mdui-card-primary">
