留言板更改

--- a/talk2.html
+++ b/talk2.html
@@ -24,7 +24,7 @@
   <script>
     Waline.init({
       el: '#waline',
-      serverURL: 'https://waline.imfmkli.top/',
+      serverURL: 'https://waline.fvli.top/',
       requiredMeta: ['nick', 'mail']
     });
   </script>
