Something Changed - 更新设备列表

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
-            <p>1.REDMI Turbo 4 祥云白 16+256G<br>2.一台搭载了i3-8100的CPU和GTX1070Ti的GPU的电脑<br>3.Nintendo Switch（卖了）<br>4.New Nintendo 3ds（卖了）<br>5.荣耀20（换掉了）<br>6.REDMI Buds 6 Lite（青春版）（有点想换CMF By Nothing的耳机）<br>7.小米手环9 NFC版<br>etc.</p>
+            <p>1.REDMI Turbo 4 祥云白 16+256G<br>2.一台搭载了i3-8100的CPU和GTX1070Ti的GPU的电脑<br>3.Nintendo Switch（卖了）<br>4.New Nintendo 3ds（卖了）<br>5.荣耀20（换掉了）<br>6.REDMI Buds 6 Lite（青春版）<br>7.REDMI Buds 6 Pro （国行）（全原价购买） <br>8.小米手环9 NFC版<br>etc.</p>
         </div>
 
     </div>
