--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
         <div class="mdui-card-content mdui-typo">
             <p>
                 <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
-                <br>这只是一个无聊的小站，站长搭建来自娱自乐罢了
-                <br>站长开学后只在周五、周六、周日上线，封校除外。
-                <br>这个网站也摇摇晃晃过了五年，我也长大了不少
+                <br>这只是一个无聊的小站，站长搭建来自娱自乐而已
                 <br>看到了曾经捐赠了yfun大佬而获得的主页
-                <br>感慨万千，重新拿起做主页
-                <br>最后感谢你的访问
+                <br>于是重新用这个主页做网站
+                <br>最后感谢你的访问啦
             </p>
         </div>
 
