--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons">border_color</i>
                 <div class="mdui-list-item-content">留言板</div>
             </li>
+            
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fvli.top/talk2.html'">
+                <i class="mdui-list-item-icon mdui-icon material-icons">border_color</i>
+                <div class="mdui-list-item-content">Blog</div>
+            </li>
 
             <li class="mdui-subheader">找到我</li>
             <li class="mdui-list-item mdui-ripple" onclick="window.open('http://github.com/fmkli');"> <i
