--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pigeoo (@Fmkli)</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/mdui/0.1.2/css/mdui.min.css"
+    <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"
         integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
 </head>
@@ -155,7 +155,7 @@
         </p>
     </footer>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/mdui/0.1.2/js/mdui.min.js"
+    <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"
         integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
         crossorigin="anonymous"></script>
     <script src="home.js"></script>
