--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="mdui-list-item-content">留言板</div>
             </li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fvli.top/talk2.html'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://b.fvli.top/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">border_color</i>
                 <div class="mdui-list-item-content">Blog</div>
             </li>
